tests/snapshots/snapshot_golden_master__gm_event_file_changed.snap
---
source: tests/snapshot_golden_master.rs
expression: e
---
{
  "ts": "2025-08-01T08:00:00Z",
  "type": "file_changed",
  "path": "src/auth.rs",
  "summary": "Added JWT validation helper"
}
