tests/snapshots/snapshot_golden_master__gm_event_run_started.snap
---
source: tests/snapshot_golden_master.rs
expression: e
---
{
  "ts": "2025-08-01T08:00:00Z",
  "type": "run_started",
  "message": "execution begin"
}
