tests/snapshots/snapshot_golden_master__gm_event_tool_call_with_ids.snap
---
source: tests/snapshot_golden_master.rs
expression: e
---
{
  "ts": "2025-08-01T08:00:00Z",
  "type": "tool_call",
  "tool_name": "read_file",
  "tool_use_id": "tu_gm_001",
  "parent_tool_use_id": "tu_gm_000",
  "input": {
    "path": "src/lib.rs"
  }
}
