tests/snapshots/snapshot_golden_master__gm_event_tool_result_error.snap
---
source: tests/snapshot_golden_master.rs
expression: e
---
{
  "ts": "2025-08-01T08:00:00Z",
  "type": "tool_result",
  "tool_name": "write_file",
  "tool_use_id": "tu_gm_002",
  "output": {
    "error": "permission denied: /etc/passwd"
  },
  "is_error": true
}
