tests/snapshots/snapshot_golden_master__gm_event_tool_result_success.snap
---
source: tests/snapshot_golden_master.rs
expression: e
---
{
  "ts": "2025-08-01T08:00:00Z",
  "type": "tool_result",
  "tool_name": "read_file",
  "tool_use_id": "tu_gm_001",
  "output": {
    "content": "fn main() { println!(\"hello\"); }"
  },
  "is_error": false
}
